# legado

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  download.gradle
app/src/main/assets/defaultData/: coverRule.json  dictRules.json  keyboardAssists.json  readConfig.json  txtTocRule.json
app/src/main/assets/help/: jsHelp.md  ruleHelp.md
app/src/main/cpp/: CMakeLists.txt  common.cpp  math_interface.h  native-lib.cpp
app/src/main/cpp/arm/: neon_math.cpp
app/src/main/cpp/arm64/: neon_math.cpp
app/src/main/cpp/x86/: sse_math.cpp
app/src/main/cpp/x86_64/: avx_math.cpp
app/src/main/java/cn/hutool/core/util/: HexUtil.java
app/src/main/java/io/legado/app/: App.kt
app/src/main/java/io/legado/app/constant/: AppPattern.kt  (+1 more)
app/src/main/res/layout/: dialog_photo_view.xml
app/src/main/res/menu/: book_read.xml  book_source_debug.xml  explore_item.xml  main_rss.xml  rss_read.xml  source_edit.xml  source_login.xml  speak_engine_edit.xml  web_view.xml
app/src/main/res/values/: ids.xml  strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-ja-rJP/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: pref_config_backup.xml  pref_config_other.xml
gradle/wrapper/: gradle-wrapper.properties
modules/book/: build.gradle
modules/rhino/: build.gradle
modules/rhino1.7.14/: build.gradle
(+130 files in other folders)
